# verbumdei-api

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
data/: eras.json  questions.json
scripts/: api_workflow.sh  dump_eras.sh  dump_questions.sh  export_frontend_questions.js  import_eras_dataset.sh  load_eras.sh  load_questions.sh  validate.sh  validate_with_server.sh
src/: config.rs  db.rs  lib.rs  main.rs
src/resources/: mod.rs
src/resources/eras/: handler.rs  mod.rs  model.rs  queries.rs
src/resources/health/: handler.rs
src/resources/questions/: handler.rs  model.rs  queries.rs
src/resources/ui/: elements.rs  handler.rs  levels.rs  locales.rs  mod.rs
src/routes/: api.rs  health.rs
tests/: api_workflow.rs  eras_api.rs
tests/fixtures/: question_invalid.json  question_valid.json
