[package]
name = "verbumdei-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = { version = "2", features = ["tokio-runtime"] }
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
